fixing issues with display on small screens

--- a/main.less
+++ b/main.less
@@ -136,25 +136,16 @@ background-image: -webkit-linear-gradient(top right, #558E65 0%, #558E65 1%, #13
 background-image: linear-gradient(to bottom left, #558E65 0%, #558E65 1%, #13093D 90%, #050827 100%);
 }
 
-// @media screen and (max-width: 800px) {
-//   /* smaller than 980px*/
-//   #contactFold {
-//     background: @contactFoldBack;
-//     color: @fontColor;
-//   }
-// }
-
 #contactFold {
   background: @contactFoldBack;
   color: @fontColor;
 }
 
 @media screen and (min-width: 1440px) {
-  /* larger than 980px*/
   #contactFold {
     background: @contactFoldBack;
     color: @fontColor;
-    height: 770px;
+    height: 600px;
   }
 }
 
